@@ -1,0 +1,21 @@
+﻿/*
+ * Platform.cs
+ *
+ * Authors:
+ *   Rolf Bjarne Kvinge (RKvinge@novell.com)
+ *   
+ * Copyright 2009 Novell, Inc. (http://www.novell.com)
+ *
+ * See the LICENSE file included with the distribution for details.
+ *
+ */
+
+namespace MonkeyWrench
+{
+	public enum Platform
+	{
+		Windows,
+		Linux,
+		Mac
+	}
+}
