@@ -1,5 +1,17 @@
 2009-09-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* Platform.cs: Added.
+	* ProcessHelper.cs:
+	* ProcessHelperLinux.cs:
+	* ProcessHelperWindows.cs: Added support for specifying the platform
+	and the child process algorithm (ps, pgrep) from the configuration.
+
+	* MonkeyWrench.csproj: Updated.
+
+	* Configuration.cs: Added Platform and ChildProcessAlgorithm.
+
+2009-09-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* ProcessHelperMac.cs:
 	* ProcessHelperLinux.cs: Add a ps implementation to get all child
 	processes, and use kill to kill processes on mac too.
