@@ -1,3 +1,8 @@
+2009-09-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* Configuration.html: Added information about ChildProcessAlgorithm
+	and Platform.
+
 2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* EditLaneHelp.html: Start writing some help for the EditLane page.
